[package]
name = "hc_zome_mere_memory"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/spartan-holochain-counsel/hc-zome-mere-memory"
description = ""
readme = "README.md"

[lib]
name = "mere_memory_api"
crate-type = ["cdylib", "rlib"]

[dependencies]
essence_payloads = "0.1"
mere_memory = {path = "./mere_memory"}
mere_memory_types = {path = "./mere_memory_types"}
hdk = { git = "https://github.com/holochain/holochain", rev = "f010279667aa49b620f2d053b1cc9dc3e12ad76c" }
hex = "0"
serde = "1"
thiserror = "1"

[dev-dependencies]
rand = "0.8.3"
