[package]
name = "mere_memory"
version = "0.0.0"
authors = ["Matthew Brisebois <matthew.brisebois@holo.host>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/spartan-holochain-counsel/hc-zome-mere-memory"
description = ""
readme = "README.md"

[lib]
name = "mere_memory"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdi = { git = "https://github.com/holochain/holochain", rev = "f010279667aa49b620f2d053b1cc9dc3e12ad76c" }
mere_memory_types = {path = "../mere_memory_types"}
serde = "1"
sha2 = "0"
